# iridium

./: Cargo.toml  README.md
src/: cli.yaml  instruction.rs  main.rs  vm.rs
src/assembler/: assembler_errors.rs  directive_parsers.rs  instruction_parsers.rs  label_parsers.rs  mod.rs  opcode_parsers.rs  operand_parsers.rs  program_parsers.rs  register_parsers.rs  symbols.rs
src/repl/: mod.rs
